@@ -3392,44 +3392,16 @@ argument_list|,
 name|pool
 argument_list|)
 expr_stmt|;
+comment|/* If there was an error reading the response (maybe there wasn't          enough data available), don't bother passing the response to the          application.           If the authentication was tried, but failed, pass the response          to the application, maybe it can do better. */
 if|if
 condition|(
-name|SERF_BUCKET_READ_ERROR
-argument_list|(
 name|status
-argument_list|)
 condition|)
 block|{
-comment|/* Report the request as 'died'/'cancelled' to the application */
-call|(
-name|void
-call|)
-argument_list|(
-operator|*
-name|request
-operator|->
-name|handler
-argument_list|)
-argument_list|(
-name|request
-argument_list|,
-name|NULL
-argument_list|,
-name|request
-operator|->
-name|handler_baton
-argument_list|,
-name|pool
-argument_list|)
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|status
-condition|)
 return|return
 name|status
 return|;
+block|}
 block|}
 if|if
 condition|(
